codemp/generated/game/bg_saga.h

void BG_SiegeStripTabs( char *buf );
int BG_SiegeGetValueGroup( char *buf, char *group, char *outbuf );
int BG_SiegeGetPairedValue( char *buf, char *key, char *outbuf );
void BG_SiegeTranslateForcePowers( char *buf, siegeClass_t *siegeClass );
int BG_SiegeTranslateGenericTable( char *buf, stringID_table_t *table, qboolean bitflag );
void BG_SiegeParseClassFile( const char *filename, siegeClassDesc_t *descBuffer );
int BG_SiegeCountBaseClass( const int team, const short classIndex );
char *BG_GetUIPortraitFile( const int team, const short classIndex, const short cntIndex );
int BG_GetUIPortrait( const int team, const short classIndex, const short cntIndex );
siegeClass_t *BG_GetClassOnBaseClass( const int team, const short classIndex, const short cntIndex );
void BG_SiegeLoadClasses( siegeClassDesc_t *descBuffer );
siegeClass_t *BG_SiegeFindClassByName( const char *classname );
void BG_SiegeParseTeamFile( const char *filename );
void BG_SiegeLoadTeams();
siegeTeam_t *BG_SiegeFindThemeForTeam( int team );
void BG_PrecacheSabersForSiegeTeam( int team );
qboolean BG_SiegeCheckClassLegality( int team, char *classname );
siegeTeam_t *BG_SiegeFindTeamForTheme( char *themeName );
void BG_SiegeSetTeamTheme( int team, char *themeName );
int BG_SiegeFindClassIndexByName( const char *classname );