codemp/julia/generated/game/bg_saga.jl

BG_SiegeStripTabs( buf_ ) = ccall((:BG_SiegeStripTabs, lib), Void, ( Ptr{Char},  ), buf_ );
BG_SiegeGetValueGroup( buf_, group_, outbuf_ ) = ccall((:BG_SiegeGetValueGroup, lib), Int32, ( Ptr{Char}, Ptr{Char}, Ptr{Char},  ), buf_, group_, outbuf_ );
BG_SiegeGetPairedValue( buf_, key_, outbuf_ ) = ccall((:BG_SiegeGetPairedValue, lib), Int32, ( Ptr{Char}, Ptr{Char}, Ptr{Char},  ), buf_, key_, outbuf_ );
BG_SiegeTranslateForcePowers( buf_, siegeClass_ ) = ccall((:BG_SiegeTranslateForcePowers, lib), Void, ( Ptr{Char}, Ptr{siegeClass_t},  ), buf_, siegeClass_ );
BG_SiegeTranslateGenericTable( buf_, table_, bitflag_ ) = ccall((:BG_SiegeTranslateGenericTable, lib), Int32, ( Ptr{Char}, Ptr{stringID_table_t}, qboolean,  ), buf_, table_, bitflag_ );
BG_SiegeParseClassFile( filename_, descBuffer_ ) = ccall((:BG_SiegeParseClassFile, lib), Void, ( Ptr{Char}, Ptr{siegeClassDesc_t},  ), filename_, descBuffer_ );
BG_SiegeCountBaseClass( team_, classIndex_ ) = ccall((:BG_SiegeCountBaseClass, lib), Int32, ( Int32, Int16,  ), team_, classIndex_ );
BG_GetUIPortraitFile( team_, classIndex_, cntIndex_ ) = ccall((:BG_GetUIPortraitFile, lib), Char, ( Int32, Int16, Int16,  ), team_, classIndex_, cntIndex_ );
BG_GetUIPortrait( team_, classIndex_, cntIndex_ ) = ccall((:BG_GetUIPortrait, lib), Int32, ( Int32, Int16, Int16,  ), team_, classIndex_, cntIndex_ );
BG_GetClassOnBaseClass( team_, classIndex_, cntIndex_ ) = ccall((:BG_GetClassOnBaseClass, lib), siegeClass_t, ( Int32, Int16, Int16,  ), team_, classIndex_, cntIndex_ );
BG_SiegeLoadClasses( descBuffer_ ) = ccall((:BG_SiegeLoadClasses, lib), Void, ( Ptr{siegeClassDesc_t},  ), descBuffer_ );
BG_SiegeFindClassByName( classname_ ) = ccall((:BG_SiegeFindClassByName, lib), siegeClass_t, ( Ptr{Char},  ), classname_ );
BG_SiegeParseTeamFile( filename_ ) = ccall((:BG_SiegeParseTeamFile, lib), Void, ( Ptr{Char},  ), filename_ );
BG_SiegeLoadTeams() = ccall((:BG_SiegeLoadTeams, lib), Void, (),  );
BG_SiegeFindThemeForTeam( team_ ) = ccall((:BG_SiegeFindThemeForTeam, lib), siegeTeam_t, ( Int32,  ), team_ );
BG_PrecacheSabersForSiegeTeam( team_ ) = ccall((:BG_PrecacheSabersForSiegeTeam, lib), Void, ( Int32,  ), team_ );
BG_SiegeCheckClassLegality( team_, classname_ ) = ccall((:BG_SiegeCheckClassLegality, lib), qboolean, ( Int32, Ptr{Char},  ), team_, classname_ );
BG_SiegeFindTeamForTheme( themeName_ ) = ccall((:BG_SiegeFindTeamForTheme, lib), siegeTeam_t, ( Ptr{Char},  ), themeName_ );
BG_SiegeSetTeamTheme( team_, themeName_ ) = ccall((:BG_SiegeSetTeamTheme, lib), Void, ( Int32, Ptr{Char},  ), team_, themeName_ );
BG_SiegeFindClassIndexByName( classname_ ) = ccall((:BG_SiegeFindClassIndexByName, lib), Int32, ( Ptr{Char},  ), classname_ );
